src/objects/Level__c.object
<CustomObject>
    <description>Manage the Tables of Contents for the Public Web per Article Type.</description>
    <fields>
        <fullName>Level_Number__c</fullName>
        <inlineHelpText>The Level corresponds to the Article Type.</inlineHelpText>
        <label>Level Number</label>
        <picklist>
            <picklistValues>
                <fullName>Level 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Parent to this Level.</inlineHelpText>
        <label>Parent Level</label>
        <referenceTo>Level__c</referenceTo>
        <relationshipLabel>Child Levels</relationshipLabel>
        <relationshipName>Child_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series_Template__c</fullName>
        <label>Series Template</label>
        <referenceTo>Publication_Template__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>The order the levels will be displayed in the Table of Contents</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Level</label>
    <nameField>
        <label>Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>